--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
     ></div>
 
     <header class="sticky top-0 z-50 bg-blue-dark py-4 px-6 lg:px-20 shadow-md">
-      <div class="flex justify-between items-center max-w-[1200px] mx-auto">
+      <div class="flex justify-between items-center">
         <a
           href="/"
           class="font-heading font-bold tracking-[2px] text-white text-xl z-50 relative"
@@ -390,13 +390,13 @@
       </div>
     </header>
 
-    <main class="flex-grow px-6 lg:px-20 py-10 max-w-[1200px] w-full mx-auto">
+    <main class="flex-grow px-6 lg:px-20 py-10 w-full">
       {% block content %} {% endblock %}
     </main>
 
     <footer class="bg-blue-dark text-white pt-16 pb-8 px-6 lg:px-20 mt-auto">
       <div
-        class="grid grid-cols-1 lg:grid-cols-[2fr_1fr_1fr] gap-10 max-w-[1200px] mx-auto"
+        class="grid grid-cols-1 lg:grid-cols-[2fr_1fr_1fr] gap-10"
       >
         <div class="footer-brand">
           <div class="font-heading font-bold tracking-[2px] text-xl">
