--- a/templates/admin_custom/dashboard.html
+++ b/templates/admin_custom/dashboard.html
@@ -4,7 +4,7 @@
 {% block page_subtitle %}Resumen general del inventario{% endblock %} 
 {% block content %}
 
-<!-- DEBUG: Bordes para visualizar áreas -->
+<!-- DEBUG: Bordes para visualizar áreas Nestor puta-->
 <style>
   .debug-stats { border: 3px solid red; }
   .debug-stat-card { border: 3px solid orange; }
